# practical-python

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
effective-python/: dict_order.py  enumerate.py  pyproject.toml  use_defaultdict.py  walrus.py  yield_from_execution_time.py  zip.py
effective-python/effective_python/: complex_sort.py  dict_missing_value.py  eliminate_repetition.py  f_string.py  function_return_unpack.py  functiontools_wraps.py  generator_send.py  generator_throw.py  iterator_priority.py  list_comprehension.py  only_args.py  stride_and_slice.py  unpack.py  use_generator.py  use_generator_expression.py  use_itertools.py  varargs.py
effective-python/effective_python/dataset/: my_file.txt
env/: docker-compose.yaml
poetry-demo/: README.md  pyproject.toml
poetry-demo/poetry_demo/: __main__.py  sample.py
poetry-demo/tests/: test_sample.py
src/: accessor.py  args_default.py  args_option.py  attribute.py  bytes_and_str.py  catch_all_unpack.py  class_decorator.py  closure_and_scope.py  collections_abc.py  complex_comprehension.py  create_class.py  function_return_unpack.py  generator_send.py  generator_throw.py  helper_func.py  init_super_class.py  lazy_attribute.py  mix_in.py  reusable_property.py  send_exceptions.py  sequence_slice.py  simple_interface.py  type_registration.py  use_classmethod.py  use_itertools.py  use_property.py  use_set_name.py  valid_by_init_subclass.py  yield_from.py  yield_from_execution_time.py
tests/: test_valid_by_init_subclass.py
