[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["chama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "poetry_demo"
testpaths = ["tests",]